# Computer-Vision-2

./: .ci  .editorconfig  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  cv2.sublime-project
1-patch-match/: CMakeLists.txt  README.md  main.cpp  patchmatch.cpp  patchmatch.hpp  patchmatch.py  report.tex  similarity.py  visual.py
2-grabcut/: CMakeLists.txt  README.md  _geom.h  app.cpp  cascades.cmake  facedetector.cpp  faceseg.cpp  gcgraph.hpp  grabcut.cpp  grabcut.cpp.orig  grabcut.hpp  images.cmake  precomp.hpp
argtable2/: CMakeLists.txt  getopt.c  getopt1.c
getopt/: CMakeLists.txt  getopt.c  getopt.h  getopt_long.c
wingetopt/: CMakeLists.txt  wingetopt.c  wingetopt.h  wingetopt_long.c
